objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_SV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRC_City__c</fullName>
        <label>City</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Port__c</fullName>
        <label>Port</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_State__c</fullName>
        <label>State</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Photo__c</fullName>
        <formula>IF( ISBLANK( PRT_PhotoAttachmentId__c),
IMAGE(&apos;/resource/PictureUploader/default-avatar.png&apos;,$Label.PRT_Photo,52,40 ),
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+PRT_PhotoAttachmentId__c,$Label.PRT_Photo,52,40 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SO_Jaguar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jaguar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Sales_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Markets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTC_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTC_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>81</fullName>
                </value>
                <value>
                    <fullName>83</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>86</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Classic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Frequency__c</fullName>
        <label>Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_JLR_Number__c</fullName>
        <label>JLR Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Land_Rover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land Rover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Sales_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Franchise_Type__c</fullName>
        <label>Franchise Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Full Retailer</fullName>
                </value>
                <value>
                    <fullName>Sales Retailer</fullName>
                </value>
                <value>
                    <fullName>Satellite Sales Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Print/Online</fullName>
                </value>
                <value>
                    <fullName>News Service/Syndicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTC_PAG_Number__c</fullName>
        <label>PAG Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Region_Name__c</fullName>
        <label>Region Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_LocationType__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary location</fullName>
                </value>
                <value>
                    <fullName>Auction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Hand in location</fullName>
                </value>
                <value>
                    <fullName>Repair Center</fullName>
                </value>
                <value>
                    <fullName>Dealer / Retailer</fullName>
                </value>
                <value>
                    <fullName>Customer Location</fullName>
                </value>
                <value>
                    <fullName>NSC Location (Vista Vehicle only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Prime_Outlet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the account is a prime outlet</description>
        <label>Prime Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Trade_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to know that you are dealing with a trader and not a normal business</description>
        <label>Trade Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRC_Media_Segment__c</fullName>
        <label>Media Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Classic Automotive</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment / Celeb</fullName>
                </value>
                <value>
                    <fullName>Equestrian</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Local LA</fullName>
                </value>
                <value>
                    <fullName>Local NY</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Interest</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Motorsport</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Parenting</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Interest</fullName>
                </value>
                <value>
                    <fullName>Female Lifestyle</fullName>
                    <isActive>false</isActive>
                    <label>Female Lifestyle</label>
                </value>
                <value>
                    <fullName>General Lifestyle</fullName>
                    <isActive>false</isActive>
                    <label>General Lifestyle</label>
                </value>
                <value>
                    <fullName>Media Lifestyle</fullName>
                    <isActive>false</isActive>
                    <label>Media Lifestyle</label>
                </value>
                <value>
                    <fullName>Men Lifestyle</fullName>
                    <isActive>false</isActive>
                    <label>Men Lifestyle</label>
                </value>
                <value>
                    <fullName>Technology</fullName>
                    <isActive>false</isActive>
                    <label>Technology</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_In_Owner_Team__c</fullName>
        <formula>OR(
TEXT(Owner.PRT_Team__c) = TEXT($User.PRT_Team__c),
 $Permission.PRT_Global_Admin,
 $Profile.Name = &quot;System Administrator&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRT In Owner Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTC_Buy_Sell_With__c</fullName>
        <label>Buy Sell with</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Change_Status__c</fullName>
        <label>Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTC_Retailer_Code__c</fullName>
        <label>Retailer Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Extra_Email_10__c</fullName>
        <label>Email 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Extra_Email_11__c</fullName>
        <label>Email 11</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Extra_Email_12__c</fullName>
        <label>Email 12</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SO_Franchise_Status__c</fullName>
        <label>Franchise Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTC_Retailer_Country__c</fullName>
        <label>Retailer Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Franchise_CI_Code__c</fullName>
        <label>Franchise CI Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Outlet_Readership__c</fullName>
        <label>Reach/Circulation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRT_PhotoAttachmentId__c</fullName>
        <description>SYSTEM Controlled. When Advocate photo is stored on attachments store the Id in this field fro use in formula for displaying photo.</description>
        <label>PRT_PhotoAttachmentId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Incentive_Program__c</fullName>
        <label>Incentive Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Legal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Preferred_Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The retailer that this client has a preference for working with</description>
        <label>Preferred Retailer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an account of type Retailer</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RTC_Retailer_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preferred Clients</relationshipLabel>
        <relationshipName>SO_PreferredRetailer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTC_Market_Manager_Name__c</fullName>
        <label>Market Manager Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Sold_to_Dealer_Code__c</fullName>
        <label>Sold to Dealer Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_DataLoadingReference__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Loading Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Publication_Overview__c</fullName>
        <description>Notes describing the account</description>
        <label>Publication Overview</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTC_Previous_Dealer_Code__c</fullName>
        <label>Previous Dealer Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC_Retailer_Facility_Type__c</fullName>
        <label>Retailer Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centre</fullName>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTC_Dealer_Termination_Date__c</fullName>
        <label>Dealer Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTC_Retailer_Facility_Status__c</fullName>
        <label>Retailer Facility Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SO_Company</fullName>
        <active>true</active>
        <description>Account to handle the capture of information related to a company rather than an individual</description>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>JLR_Internal</fullName>
        <active>true</active>
        <description>Account type used for the creation of internal JLR teams or contact groups</description>
        <label>JLR Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_JLR_Account</fullName>
        <active>true</active>
        <description>Special Operations Special Account Type for holding Internal JLR Employee Orders</description>
        <label>JLR Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_NSC_Importer</fullName>
        <active>true</active>
        <description>Details of the NSC/importer</description>
        <label>NSC/Importer</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_VehicleLocation</fullName>
        <active>true</active>
        <label>Vehicle Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entitlements_Account</fullName>
        <active>true</active>
        <description>Dummy account for entitlements assignment</description>
        <label>Entitlements Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTC_Retailer_Account</fullName>
        <active>true</active>
        <label>Retailer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRC_Account_Record_Type</fullName>
        <active>true</active>
        <description>Account Layout for PR Contact Management Application</description>
        <label>Account Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Market_Allocation_Account</fullName>
        <active>true</active>
        <description>Market Allocation Account to be Associated with Vista Vehicle</description>
        <label>Market Allocation Account</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Salutation_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Salutation , &apos;Other&apos;), 
ISBLANK(  Salutation_Other__pc ) 
)</errorConditionFormula>
        <errorDisplayField>Salutation_Other__pc</errorDisplayField>
        <errorMessage>You must provide provide the salutation when selecting other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRT_LAST_NAME_2CHARS</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(LastName) &lt; 2, OR (RecordType.DeveloperName = &quot;PRT_Agent_Manager&quot;,RecordType.DeveloperName = &quot;PRT_Brand_Advocate&quot;) )</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Last Name must be at least 3 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRT_LAST_NAME_NOT_ALL_CAPS</fullName>
        <active>true</active>
        <errorConditionFormula>AND (LEN(LastName) &gt; 1,OR(LastName  =  UPPER(LastName), LastName = LOWER(LastName)),OR (RecordType.DeveloperName = &quot;PRT_Agent_Manager&quot;,RecordType.DeveloperName = &quot;PRT_Brand_Advocate&quot;) )</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Please enter the Last Name using &quot;Title Case&quot; format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_phone_or_email</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Company&apos; &amp;&amp; (ISBLANK(Phone) &amp;&amp; ISBLANK(RTC_Email__c ))) || 
(RecordType.DeveloperName = &apos;SO_Individual&apos; &amp;&amp; (ISBLANK(Phone) &amp;&amp; ISBLANK(PersonEmail) &amp;&amp; ISBLANK(PersonMobilePhone)))</errorConditionFormula>
        <errorMessage>Please enter either Phone or Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRT_FIRST_NAME_NOT_ALL_CAPS</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(ISBLANK(FirstName), LEN(FirstName)&lt;2) , FALSE,AND (OR(FirstName  =  UPPER(FirstName  ), FirstName  = LOWER(FirstName  )),OR (RecordType.DeveloperName = &quot;PRT_Agent_Manager&quot;,RecordType.DeveloperName = &quot;PRT_Brand_Advocate&quot;) ))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please enter the First Name using &quot;Title Case&quot; format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_length_of_phone</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Company&apos; || RecordType.DeveloperName = &apos;SO_Individual&apos;) &amp;&amp;
((NOT(ISBLANK(Phone)) &amp;&amp; NOT( 
OR(
AND(
LEN(Phone) &gt; 5,
REGEX(Phone, &quot;[0-9 ]+&quot;)
),
AND(
LEN(Phone) &gt; 6,
REGEX(Phone, &quot;\\+[0-9 ]+&quot;)
)
)
))||(NOT(ISBLANK(PersonMobilePhone)) &amp;&amp; NOT( 
OR(
AND(
LEN(PersonMobilePhone) &gt; 5,
REGEX(PersonMobilePhone, &quot;[0-9 ]+&quot;)
),
AND(
LEN(PersonMobilePhone) &gt; 6,
REGEX(PersonMobilePhone, &quot;\\+[0-9 ]+&quot;)
)
)
)
)
)</errorConditionFormula>
        <errorMessage>Please enter valid Phone/Mobile number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRT_Profession_Other_require_Description</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( PRT_Profession__pc , &apos;Other&apos;), ISBLANK( PRT_Profession_Other__pc ))</errorConditionFormula>
        <errorDisplayField>PRT_Profession_Other__pc</errorDisplayField>
        <errorMessage>You must provide a profession description</errorMessage>
    </validationRules>
</CustomObject>